# ece_362_final_proj

./: CMakeLists.txt  README.md  button_and_rotary.c  button_mode.c  display.c  platformio.ini
CIRCUIT/: BAT-TH_2479.efoo  BAT-TH_2P-L53.0-W24.6-P12.70_2468.efoo  DPDT_switch.bak  DPDT_switch.kicad_sym  ECE_362_final_proj-job.gbrjob  ECE_362_final_proj.kicad_pcb  ECE_362_final_proj.kicad_prl  ECE_362_final_proj.kicad_pro  ECE_362_final_proj.kicad_sch  ECE_363_disp.kicad_prl  ECE_363_disp.kicad_pro  ECE_363_disp.kicad_sch  MSP2202_TFT.kicad_sym  ProLib_pcs_2025-11-17.elibz  ProLib_pcs_2025-11-19.elibz  Quad_OpAmp_TL084.bak  Quad_OpAmp_TL084.kicad_sym  Rotary_Encoder_EC11E18244A5.bak  Rotary_Encoder_EC11E18244A5.kicad_sym  SOP-14_L8.6-W3.9-P1.27-LS6.0-BL.efoo  SW-TH_4P-L6.0-W6.0-P4.50-LS6.5.efoo  SW-TH_EC11E18244A5.efoo  SW-TH_SSSS222700.efoo  SignalConditioner.kicad_sch  button and encoder diagram.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~ECE_362_final_proj.kicad_sch.lck
CODE/: CMakeLists.txt
Proton-KiCAD/: 362.kicad_mod  DebugProbe.kicad_sch  Proton.kicad_pcb  Proton.kicad_prl  Proton.kicad_pro  Proton.kicad_sch  jlcpcb-bom.csv  positions.csv  purdue.kicad_mod  purdue.kicad_sym
include/: wavegen.h
schems/: ECE362_Final_Project.kicad_sch  ECE_362_final_proj.kicad_prl  ECE_362_final_proj.kicad_pro  ECE_362_final_proj.kicad_sch  ECE_363_disp.kicad_pro  ECE_363_disp.kicad_sch  MSP2202_TFT.kicad_sym  SignalConditioner.kicad_pro  SignalConditioner.kicad_sch  button and encoder diagram.kicad_pro  signal-conditioner.asc
src/: adc.c  lcd.c  main.c
(+49 files in other folders)
